[package]
name = "gha-toolkit"
version = "0.1.1"
edition = "2021"
description = "GitHub Actions toolkit for Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-lock = "2.5.0"
bytes = "1.1.0"
futures = "0.3.24"
hex = "0.4.3"
http = "0.2.8"
hyperx = { version = "1.4.0", features = ["headers"] }
md-5 = "0.10.5"
reqwest = { version = "0.11.12", features = ["json"] }
reqwest-middleware = "0.1.6"
reqwest-retry = "0.1.5"
reqwest-retry-after = "0.1.1"
reqwest-tracing = "0.3.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_urlencoded = "0.7.1"
sha2 = "0.10.6"
shell-escape = "0.1.5"
thiserror = "1.0.37"
tracing = "0.1.36"
url = "2.2.2"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros"] }
