[package]
name = "gha-toolkit"
version = "0.3.1"
edition = "2021"
description = "GitHub Actions toolkit for Rust"
license = "MIT"
homepage = "https://github.com/BitskiCo/gha-toolkit"
repository = "https://github.com/BitskiCo/gha-toolkit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-lock = "2.6.0"
bytes = "1.1.0"
futures = "0.3.25"
hex = "0.4.3"
http = "0.2.8"
hyperx = { version = "1.4.0", features = ["headers"] }
md-5 = "0.10.5"
reqwest = { version = "0.11.13", features = ["json"] }
reqwest-middleware = "0.1.6"
reqwest-retry = "0.1.5"
reqwest-retry-after = "0.1.1"
reqwest-tracing = "0.3.1"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
serde_urlencoded = "0.7.1"
sha2 = "0.10.6"
shell-escape = "0.1.5"
thiserror = "1.0.37"
tracing = "0.1.37"
url = "2.2.2"

[dev-dependencies]
anyhow = "1.0.66"
tokio = { version = "1.22.0", features = ["macros"] }
